tests/baselines/reference/ifElseWithStatements3Error.errors.txt
tests/cases/compiler/ifElseWithStatements3Error.ts(16,5): error TS95025: Predicates in true or else branch of if statement are unsatisfiable because of extra knowledge from the if condition
tests/cases/compiler/ifElseWithStatements3Error.ts(21,9): error TS95025: Predicates in true or else branch of if statement are unsatisfiable because of extra knowledge from the if condition
tests/cases/compiler/ifElseWithStatements3Error.ts(27,9): error TS95025: Predicates in true or else branch of if statement are unsatisfiable because of extra knowledge from the if condition


==== tests/cases/compiler/ifElseWithStatements3Error.ts (3 errors) ====
    interface PrivateMessage {
        text?: string;
        userid?: number;
        screenname?: string;
    } constrains {
        present(text);
    or(and(present(userid), not(present(screenname))),
        and(not(present(userid)), present(screenname)));
    }
    
    let pm: PrivateMessage = {text: "Hi!", userid: 42};
    
    if (pm.text) {
        pm.text;
    } else {
        pm.text; //ERROR
        ~~
!!! error TS95025: Predicates in true or else branch of if statement are unsatisfiable because of extra knowledge from the if condition
    }
    
    if (pm.userid) {
        if(pm.screenname) {
            pm.text; //ERROR
            ~~
!!! error TS95025: Predicates in true or else branch of if statement are unsatisfiable because of extra knowledge from the if condition
        }
    } else {
        if (pm.screenname){
            pm.text;
        } else {
            pm.text; //ERROR
            ~~
!!! error TS95025: Predicates in true or else branch of if statement are unsatisfiable because of extra knowledge from the if condition
        }
    }
    